# jeancharles.quillet

./: .ghcid  .gitattributes  .gitignore  README.md  configuration.nix  default.nix  deploy.sh  flake.nix  hie.yam  index.md  jeancharles-quillet.cabal  robots.txt  scratch  shell.nix  site.hs
.github/workflows/: ci.yml  nix-build.yml
app/: Cache.hs  Compilers.hs  DistantText.hs  Main.hs  Options.hs  PandocCompiler.hs
assets/: mermaid-init.js  scripts.js  style.css  toc-and-menu.js
images/: columns.mkv
nix/: cache.nix  configuration.nix
pages/: contact.md  cv.md  projects.md
pages/projects/: bigball.md  hscalendar.md
posts/: 2020-02-20-Introducing.md  2020-02-22-This_website_is_generated_by_Hakyll.md  2021-02-22-This_website_is_generated_by_Hakyll.md  2021-03-15-Touch_typing_tips_for_French_developers.md  2021-04-11-Error_handling_resources_for_Haskell.md  2021-05-14-Viming-Haskell-in-2021.md  2021-06-25-A-good-enough-mechanical-keyboard.md  2021-07-18-ssh-config-as-a-hosts-file.md  2021-08-20-How-to-use-ddcutil-to-switch-input-of-a-Dell-screen.md  2021-08-20-how-to-use-ddcutil-to-switch-input-of-a-dell-screen.md  2021-10-06-Tuning-your-mechanical-keyboard-firmware.md  2021-11-15-Copying-from-everywhere.md  2021-12-21-The-coolest-DIY-project-around.md  2022-01-30-Local-mariadb-server-with-nix-shell.md  2022-03-02-Practical-introduction-to-fugitive.md  2022-04-22-Embed-the-git-hash-into-a-binary-with-nix.md  2022-06-12-Going_Freelance_in_France.md  2022-08-29-Making-keyboard-settings-survives-USB-connections.md  2022-10-31-Testing-Active-Directory-without-Active-Directory.md  2023-01-16-Basic-nix-vm-for-just-anything.md  2023-02-07-The-home-manager-function-that-changes-everything.md  2023-03-31-Going-split.md  2023-06-01-A-perfect-pet-project-to-learn-Rust.md  2023-08-01-Deploying-a-static-website-with-nix.md  2023-11-07-Writing-an-Android-app-in-Haskell.md  2024-01-30-Advent-of-code-2023.md  2024-05-02-Columns-a-new-XMonad-layout.md  2024-09-04-Haskell-dev-workflow-with-ghcid-and-neovim.md  2024-11-28-ghcid-error-file.nvim.md  2025-02-21-Fast-compilation-loop-with-tmux-and-neovim.md  2025-03-24-Multiple-components-in-ghci-is-finally-here.md  2025-08-13-NixOS-in-a-gameboy-shell.md  2025-11-18-Htagcli-a-new-command-line-audio-tagger.md  2026-03-10-The-Badger-2350-is-a-cool-e-ink-badge.md  2026-06-21-My-Best-tmux-tips.md  draft-keybindings.md  draft-merit-of-writing.md
templates/: default.html  posts.html  recent-posts.html  sitemap.xml
