cabal-version:      2.2
name:               jeancharles-quillet
version:            0.1.0.0
build-type:         Simple

executable site
  main-is:          Main.hs
  hs-source-dirs:   app
  other-modules:    Cache
                  , Compilers
                  , DistantText
                  , Options
                  , PandocCompiler
  build-depends:    base == 4.*
                  , base16-bytestring
                  , bytestring
                  , cryptohash-sha256
                  , directory
                  , extra
                  , gitrev
                  , hakyll
                  , modern-uri
                  , optparse-applicative
                  , pandoc
                  , pandoc-types
                  , relude
                  , req
                  , text
                  , time
                  , time-locale-compat
  mixins:           base hiding (Prelude)
                  , relude (Relude as Prelude)
                  , relude
  ghc-options:    -threaded
                  -Wall
                  -Wcompat
                  -Widentities
                  -Wincomplete-record-updates
                  -Wincomplete-uni-patterns
                  -Wpartial-fields
                  -Wredundant-constraints
  default-extensions:
                  DataKinds
                  FlexibleContexts
                  OverloadedStrings
                  RecordWildCards
                  ScopedTypeVariables
  default-language: Haskell2010
